added: gh-pages

--- a/src/assets/styles/Cart.scss
+++ b/src/assets/styles/Cart.scss
@@ -39,11 +39,13 @@
 
   .checkout-button {
     display: block;
+    width: 174px;
+    height: 56px;
     margin: 10px auto;
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #4caf50;
-    color: white;
+    background-color: #fce000;
+    color: black;
     border: none;
     border-radius: 5px;
     cursor: pointer;
