--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -5,6 +5,7 @@ body {
   height: 100vh;
   margin: 0;
   background-color: #f4f4f4;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .banner {
